[tool.poetry]
name = "chatllm"
version = "0.2.111"
description = "Framework To Build ChatBOT"
authors = ["chatllm"]
license = "MIT license"
repository = "https://github.com/TheShadowEngine/chatllm"
readme = "README.md"
exclude = [
    "**/frontend/**/*",
]
include = [
    "**/frontend/dist/**/*",
]

[tool.poetry.scripts]
chatllm = 'chatllm.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
dataclasses_json = "^0.5.7"
flask_socketio = "^5.3.3"
flask_cors = "^3.0.10"
click = "^8.1.3"
openai = "^0.27.2"
tomli = "^2.0.1"
watchdog = "^3.0.0"
watchdog_gevent = "^0.1.1"
gevent = "^22.10.2"
gevent_websocket = "^0.10.1"
pydantic = "^1.10.6"
python-graphql-client = "^0.4.3"
python-dotenv = "^1.0.0"
auth0-python = "^4.1.1"
uptrace = "^1.18.0"
typing-inspect = "0.8.0"
typing_extensions = "4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"